--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "jest": "^26.4.2",
+    "jest-playwright-preset": "^1.3.1",
     "playwright": "^1.4.2"
+  },
+  "jest": {
+    "preset": "jest-playwright-preset"
   }
 }
